--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.0",
+		"php": ">=7.0.0",
 		"phpseclib/phpseclib": "~3.0",
-		"codenix-sv/coingecko-api": "^1.0"
+		"codenix-sv/coingecko-api": "^1.0",
+		"monolog/monolog": "^3.5"
 	},
 	"autoload": {}
 }
