--- a/config.php.example
+++ b/config.php.example
@@ -1,5 +1,8 @@
 <?php
 require_once __DIR__ . '/vendor/autoload.php';
+use Monolog\Level;
+
+define('LOGGER_LEVEL', Level::Warning); // Level::Debug
 
 $qubic_user = "guest@qubic.li";
 $qubic_pass	= "guest13@Qubic.li";
@@ -66,29 +69,38 @@ $coins = [
 
 // -- Воркеры -- //
 $arr = [
-	['host' => '192.168.1.201', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '201', 'theads' => 5, 'model' => 'R5-3600', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.202', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '202', 'theads' => 6, 'model' => 'R5-3600', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.203', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '203', 'theads' => 5, 'model' => 'R5-3600', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
+	['host' => '192.168.1.201', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '201', 'theads' => 5, 'model' => 'R5-3600', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.202', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '202', 'theads' => 6, 'model' => 'R5-3600', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.203', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '203', 'theads' => 5, 'model' => 'R5-3600', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
 
-	['host' => '192.168.1.205', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '205', 'theads' => 7, 'model' => 'R7-5800x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
+	['host' => '192.168.1.205', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '205', 'theads' => 7, 'model' => 'R7-5800x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
 	
-	['host' => '192.168.1.207', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '207', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.208', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '208', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.210', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '210', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.213', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '213', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.214', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '214', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.215', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '215', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.216', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '216', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.217', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '217', 'theads' => 11, 'model' => 'R9-5900x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
+	['host' => '192.168.1.207', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '207', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]1],
+	['host' => '192.168.1.208', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '208', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.210', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '210', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.213', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '213', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.214', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '214', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.215', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '215', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.216', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '216', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.217', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '217', 'theads' => 11, 'model' => 'R9-5900x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
 
-	['host' => '192.168.1.204', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '204', 'theads' => 12, 'model' => 'R9-5950x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.211', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '211', 'theads' => 12, 'model' => 'R9-5950x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
-	['host' => '192.168.1.212', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '212', 'theads' => 12, 'model' => 'R9-5950x', 'path_xmrig' => $path_xmrig, 'log_xmrig' => $path_xmriglog, 'path_cpuminer' => $path_cpuminer, 'date_format' => 1],
+	['host' => '192.168.1.204', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '204', 'theads' => 12, 'model' => 'R9-5950x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.211', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '211', 'theads' => 12, 'model' => 'R9-5950x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
+	['host' => '192.168.1.212', 'user' => $ssh_user, 'pass' => $ssh_pass, 'worker' => '212', 'theads' => 12, 'model' => 'R9-5950x', 'miners' => ['xmrig' => ['path' => $path_xmrig,'log' => $path_xmriglog], 'cpuminer' => ['path' => $path_cpuminer, 'log' => $path_cpuminerlog], 'qubic' => ['log' => $path_qubiclog]]],
 	[
-		'os' => 'win', 'openhardware_port' => 8085,
-		'host' => '192.168.100.103', 'user' => "m2670", 'pass' => $ssh_pass, 'worker' => '4', 'theads' => 28, 'model' => 'dual E5-2660v4 OS Windows',
-		'path_xmrig' => 'C:\Users\m2670\Desktop\xmrig-6.21.0-gcc-win64\\', 'log_xmrig' => 'C:\Users\m2670\Desktop\xmrig-6.21.0-gcc-win64\xmrig.log',
+		'os' => 'WIN', 'openhardware_port' => 8085, 'host' => '192.168.100.103', 'user' => "m2670", 'pass' => $ssh_pass, 'worker' => '4', 'theads' => 28, 'model' => 'dual E5-2660v4 OS Windows',
+		'miners' => [
+			'xmrig' => ['path'	=> 'C:\Users\m2670\Desktop\xmrig-6.21.0-gcc-win64-don0\xmrig.exe','log'	=> 'C:\Users\m2670\Desktop\xmrig-6.21.0-gcc-win64-don0\xmrig.log'],
+		]
 	],
+	[
+		'host' => '192.168.100.104', 'user' => "m2680", 'pass' => $ssh_pass, 'worker' => '4', 'theads' => 28, 'model' => 'dual E5-2680v4',
+		'miners' => [
+			'xmrig' => ['path'	=> '/home/m2680/xmrig-6.21.0-don0/xmrig','log'	=> '/home/m2680/xmrig-6.21.0-don0/xmrig.log'],
+			'cpuminer' => ['path' => '/home/m2680/cpuminer-opt-rplant/cpuminer-sse2', 'log' => '/home/m2680/cpuminer-opt-rplant/cpuminer.log'],
+			'qubic' => ['log' => "/var/log/qli.log"],
+		]
+	]
 ];
 
 if (!function_exists('str_contains')) {
